<resources>
    <string name="app_name">Purple</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_in">In</string>
    <string name="button_higher">Higher</string>
    <string name="button_lower">Lower</string>
    <string name="button_red">Red</string>
    <string name="button_black">Black</string>
    <string name="button_out">Out</string>
    <string name="button_diamonds">Diamonds</string>
    <string name="button_hearts">Hearts</string>
    <string name="button_spades">Spades</string>
    <string name="button_clubs">Clubs</string>
    <string name="button_purple">Purple</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="rules">Rules</string>
    <string name="title_activity_rules">Rules</string>

    <!-- Ad Unit IDs -->
    <string name="banner_ad_unit_id">ca-app-pub-8709821789139337/2962957002</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-8709821789139337/4439690200</string>
</resources>
